# EpicAsciiBattles

./: BUILD_PROMPT.md  PHASE_2_COMPLETE.md  README.md  project.yml
EpicAsciiBattles/: ContentView.swift  EpicAsciiBattlesApp.swift  Info.plist
EpicAsciiBattles.xcodeproj/: project.pbxproj
EpicAsciiBattles/Core/: DFColors.swift  GameCore.swift  GameState.swift  NameGenerator.swift  TilesetRenderer.swift
EpicAsciiBattles/Models/: BattleEvent.swift  GameModels.swift  GameSettings.swift
EpicAsciiBattles/Persistence/: LeaderboardStore.swift
EpicAsciiBattles/Views/: BattleView.swift  HomeView.swift  LeaderboardView.swift  MarathonBattleView.swift  RoundOfferView.swift  RoundResultView.swift  RunSummaryView.swift  SettingsView.swift
EpicAsciiBattles/species/: alligator.yaml  cat.yaml  cockroach.yaml  demon.yaml  donkey.yaml  duck.yaml  (+6 more)
docs/: 00-index.md  01-product-vision.md  02-core-gameplay-loop.md  03-battle-simulation.md  04-combatant-modeling.md  05-ascii-rendering-vfx.md  06-ios-ux.md  07-progression-economy.md  08-technical-architecture.md  09-data-persistence.md  10-mvp-scope-milestones.md  11-open-questions.md  12-glossary.md  13-rust-ios-integration.md  QUESTIONNAIRE-ANSWERS-2025-12-27.md  QUESTIONNAIRE.md
path./: baboon.yaml
rust/: Cargo.toml  cbindgen.toml  epic_ascii_battles_core.h
rust/src/: events.rs  lib.rs  variation.rs
rust/src/anatomy/: mod.rs  part.rs  tags.rs
rust/src/sim/: action.rs  actor.rs  ai.rs  attack.rs  battle.rs  combat.rs  grid.rs  mod.rs  tests.rs
rust/src/species/: loader.rs  mod.rs  species.rs  tests.rs  validator.rs
(+19 files in other folders)
