[package]
name = "epic_ascii_battles_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "epic_ascii_battles_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
rand_seeder = "0.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
